tests/vertical-slice/reject/scope_deadline_body.hew
// Reject fixture: scope_deadline_body — non-empty `after(duration) { ... }`
// timeout body in a CONTEXTLESS caller (`fn main()`).
//
// The HIR shape gate now admits a non-empty timeout body; MIR decides whether it
// can be lowered. A non-empty body is only lowered from an execution-context
// caller (actor handler / closure / task entry), which has a parkable
// continuation to run the body on the deadline edge. A contextless `fn main()`
// has no such continuation, so MIR lowering fails closed rather than silently
// dropping the body.
//
// This fixture pins the fail-closed boundary at:
//   hew-mir/src/lower.rs scope-deadline-body lowering (execution-context guard)
//
// Harness verb: hew compile
// Expected diagnostics:
//   - E_NOT_YET_IMPLEMENTED
//   - "MIR lowering for scope deadline body is not implemented yet"
//   - "a contextless caller has no parkable continuation"
fn _cleanup() {}

fn main() -> i64 {
    scope {
        after(5s) {
            _cleanup();
        };
    };
    0
}
